2006-05-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py: Add support for templates

2006-05-04  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/objectlist.py: display locale specific information for float,
	decimal and currency datatypes. Fixes #2562

2006-05-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/dateentry.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/entry.py:
	Add validation for DateEntry widget

2006-04-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py (excepthook): Add an exception hook
	* tests/runuitests.py:
	* tests/test_ui.py:
	Integrate ui tests into trial, remove old runuitests script.

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/player.py:
	* tests/runuitest.py:
	* tests/ui/diary.py:
	* tests/ui/diary2.py:
	Add a couple of ui tests

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	* kiwi/ui/test/recorder.py:
	Improve logging, fix a bug in finish()

2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/filechooser.py (ProxyFileChooserButton.__init__): 
	Immitate PyGTK implementation argument wise

	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/main.py:
	Add optional support for emission hook.

	* README (Kiwi): 
	Mention that PyGObject 2.10.0 is recommended for the UI test
	
2006-04-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (ProxyEntry.do_changed): Merge the
	the do_changed methods.

	* kiwi/environ.py (Environment.find_resource): Make sure it's a file

2006-04-26  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin

	* kiwi/ui/dateentry.py: Fix DateEntry calendar popup, so it hides
	correctly. Fixes #2545

2006-04-26  Johan Dahlin  <johan@gnome.org>

	* kiwi/dist.py (_VariableExtender.__init__): When prefix is not
	set, use sys.prefix instead.

2006-04-25  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: jdahlin
