@@ -18,6 +18,7 @@ Contributors (Kiwi2):
     Ali Afshar <aafshar@gmail.com>
     Gustavo Sverzut Barbieri <barbieri@gmail.com>
     Gustavo Carneiro <gjc@inescporto.pt>
+    Dave Cook <dave@davidcook.org>
     Daniel Saran R. da Cunha <daniel@async.com.br>
     Ronaldo Maia  <romaia@async.com.br>
     Evandro Vale Miquelito <evandro@async.com.br>
