@@ -1,3 +1,10 @@
+2006-05-24  David Cook  <dave@davidcook.org>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: Remove unnecessary on_column__clicked handler,
+	fixes #2610
+
 2006-05-04  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/dist.py: Add support for templates
